unpackaged/volunteersQuickStartRetrieve/objects/JobPosition.object
<CustomObject>
    <fields>
        <fullName>Default_Duration__c</fullName>
        <label>Default Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volunteer_Signup_URL__c</fullName>
        <description>This formula field is aligned to the Sharing Settings for the Guest user. If the sharing settings are updated this field should also be updated to match to ensure the registration flow works properly.</description>
        <formula>IF(ISPICKVAL(Status,&apos;In Progress&apos;),HYPERLINK($CustomMetadata.Site_URLs__mdt.Volunteer_Signup.Base_URL__c &amp; &quot;?inputId=&quot; &amp; Id,$CustomMetadata.Site_URLs__mdt.Volunteer_Signup.Base_URL__c &amp; &quot;?inputId=&quot; &amp; Id),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If Status of the record is &apos;In Progress&apos; then a URL will appear to enable registration for a Job Position Shift related to this record.</inlineHelpText>
        <label>Volunteer Signup URL</label>
        <type>Text</type>
    </fields>
</CustomObject>